pkg/kgateway/setup/testdata/agentgateway/grpcroute-out.json
{
  "addresses": [
    {
      "Type": {
        "Service": {
          "name": "grpc-echo-svc",
          "namespace": "gwtest",
          "hostname": "grpc-echo-svc.gwtest.svc.cluster.local",
          "addresses": [
            {
              "address": "CgAA7Q=="
            }
          ],
          "ports": [
            {
              "service_port": 3000,
              "target_port": 9000,
              "app_protocol": 2
            }
          ],
          "ip_families": 1
        }
      }
    },
    {
      "Type": {
        "Service": {
          "name": "http-grpcroute",
          "namespace": "gwtest",
          "hostname": "http-grpcroute.gwtest.svc.cluster.local",
          "addresses": [
            {
              "address": "CgAA4A=="
            }
          ],
          "ports": [
            {
              "service_port": 8080,
              "target_port": 8080
            }
          ],
          "ip_families": 1
        }
      }
    },
    {
      "Type": {
        "Service": {
          "name": "kubernetes",
          "namespace": "default",
          "hostname": "kubernetes.default.svc.cluster.local",
          "addresses": [
            {
              "address": "CgAAAQ=="
            }
          ],
          "ports": [
            {
              "service_port": 443,
              "target_port": 37023
            }
          ],
          "ip_families": 1
        }
      }
    },
    {
      "Type": {
        "Workload": {
          "uid": "/discovery.k8s.io/EndpointSlice/default/kubernetes/192.168.4.24",
          "name": "kubernetes",
          "namespace": "default",
          "addresses": [
            "wKgEGA=="
          ],
          "services": {
            "default/kubernetes.default.svc.cluster.local": {
              "ports": [
                {
                  "service_port": 443,
                  "target_port": 37023
                }
              ]
            }
          },
          "network_mode": 1
        }
      }
    },
    {
      "Type": {
        "Workload": {
          "uid": "//Pod/gwtest/reviews-1",
          "name": "reviews-1",
          "namespace": "gwtest",
          "addresses": [
            "CvQBCw=="
          ],
          "service_account": "default",
          "node": "worker",
          "canonical_name": "reviews",
          "canonical_revision": "v1",
          "workload_type": 2,
          "workload_name": "reviews-1",
          "status": 1
        }
      }
    },
    {
      "Type": {
        "Workload": {
          "uid": "//Pod/gwtest/reviews-2",
          "name": "reviews-2",
          "namespace": "gwtest",
          "addresses": [
            "CvQCDg=="
          ],
          "service_account": "default",
          "node": "worker2",
          "canonical_name": "reviews",
          "canonical_revision": "v2",
          "workload_type": 2,
          "workload_name": "reviews-2",
          "status": 1
        }
      }
    },
    {
      "Type": {
        "Workload": {
          "uid": "//Pod/gwtest/reviews-3",
          "name": "reviews-3",
          "namespace": "gwtest",
          "addresses": [
            "CvQDAw=="
          ],
          "service_account": "default",
          "node": "worker3",
          "canonical_name": "reviews",
          "canonical_revision": "latest",
          "workload_type": 2,
          "workload_name": "reviews-3",
          "status": 1
        }
      }
    },
    {
      "Type": {
        "Workload": {
          "uid": "//Pod/gwtest/reviews-4",
          "name": "reviews-4",
          "namespace": "gwtest",
          "addresses": [
            "CvQEBA=="
          ],
          "service_account": "default",
          "node": "worker4",
          "canonical_name": "reviews",
          "canonical_revision": "v1",
          "workload_type": 2,
          "workload_name": "reviews-4",
          "status": 1
        }
      }
    }
  ],
  "resources": [
    {
      "Kind": {
        "Bind": {
          "key": "8080/gwtest/http-grpcroute",
          "port": 8080
        }
      }
    },
    {
      "Kind": {
        "Listener": {
          "key": "gwtest/http-grpcroute.http",
          "name": "http",
          "bind_key": "8080/gwtest/http-grpcroute",
          "gateway_name": "gwtest/http-grpcroute",
          "protocol": 1
        }
      }
    },
    {
      "Kind": {
        "Route": {
          "key": "gwtest/grpc-route.0.http",
          "listener_key": "gwtest/http-grpcroute.http",
          "route_name": "gwtest/grpc-route",
          "hostnames": [
            "example.com"
          ],
          "matches": [
            {
              "path": {
                "Kind": {
                  "Exact": "/grpc.reflection.v1alpha.ServerReflection/ServerReflectionInfo"
                }
              }
            },
            {
              "path": {
                "Kind": {
                  "Regex": "/[^/]+/Ping"
                }
              }
            }
          ],
          "backends": [
            {
              "backend": {
                "Kind": {
                  "Service": "gwtest/grpc-echo-svc.gwtest.svc.cluster.local"
                },
                "port": 3000
              },
              "weight": 1
            }
          ]
        }
      }
    }
  ]
}
