pkg/kgateway/setup/testdata/agentgateway/tcproute-out.json
{
  "addresses": [
    {
      "Type": {
        "Service": {
          "name": "bar",
          "namespace": "gwtest",
          "hostname": "bar.gwtest.svc.cluster.local",
          "addresses": [
            {
              "address": "CgAAlQ=="
            }
          ],
          "ports": [
            {
              "service_port": 3002,
              "target_port": 3000,
              "app_protocol": 1
            }
          ],
          "ip_families": 1
        }
      }
    },
    {
      "Type": {
        "Service": {
          "name": "foo",
          "namespace": "gwtest",
          "hostname": "foo.gwtest.svc.cluster.local",
          "addresses": [
            {
              "address": "CgAARw=="
            }
          ],
          "ports": [
            {
              "service_port": 3001,
              "target_port": 3000,
              "app_protocol": 1
            }
          ],
          "ip_families": 1
        }
      }
    },
    {
      "Type": {
        "Service": {
          "name": "http-grpcroute",
          "namespace": "gwtest",
          "hostname": "http-grpcroute.gwtest.svc.cluster.local",
          "addresses": [
            {
              "address": "CgAADw=="
            }
          ],
          "ports": [
            {
              "service_port": 8080,
              "target_port": 8080
            }
          ],
          "ip_families": 1
        }
      }
    },
    {
      "Type": {
        "Service": {
          "name": "http-httproute",
          "namespace": "gwtest",
          "hostname": "http-httproute.gwtest.svc.cluster.local",
          "addresses": [
            {
              "address": "CgAAsQ=="
            }
          ],
          "ports": [
            {
              "service_port": 8080,
              "target_port": 8080
            }
          ],
          "ip_families": 1
        }
      }
    },
    {
      "Type": {
        "Service": {
          "name": "http-inferencepool",
          "namespace": "gwtest",
          "hostname": "http-inferencepool.gwtest.svc.cluster.local",
          "addresses": [
            {
              "address": "CgAAsg=="
            }
          ],
          "ports": [
            {
              "service_port": 8080,
              "target_port": 8080
            }
          ],
          "ip_families": 1
        }
      }
    },
    {
      "Type": {
        "Service": {
          "name": "http-tcproute",
          "namespace": "gwtest",
          "hostname": "http-tcproute.gwtest.svc.cluster.local",
          "addresses": [
            {
              "address": "CgAATg=="
            }
          ],
          "ports": [
            {
              "service_port": 8088,
              "target_port": 8088
            },
            {
              "service_port": 8089,
              "target_port": 8089
            }
          ],
          "ip_families": 1
        }
      }
    },
    {
      "Type": {
        "Service": {
          "name": "kubernetes",
          "namespace": "default",
          "hostname": "kubernetes.default.svc.cluster.local",
          "addresses": [
            {
              "address": "CgAAAQ=="
            }
          ],
          "ports": [
            {
              "service_port": 443,
              "target_port": 65235
            }
          ],
          "ip_families": 1
        }
      }
    },
    {
      "Type": {
        "Workload": {
          "uid": "/discovery.k8s.io/EndpointSlice/default/kubernetes/192.168.0.88",
          "name": "kubernetes",
          "namespace": "default",
          "addresses": [
            "wKgAWA=="
          ],
          "services": {
            "default/kubernetes.default.svc.cluster.local": {
              "ports": [
                {
                  "service_port": 443,
                  "target_port": 65235
                }
              ]
            }
          },
          "network_mode": 1
        }
      }
    },
    {
      "Type": {
        "Workload": {
          "uid": "//Pod/gwtest/reviews-1",
          "name": "reviews-1",
          "namespace": "gwtest",
          "addresses": [
            "CvQBCw=="
          ],
          "service_account": "default",
          "node": "worker",
          "canonical_name": "reviews",
          "canonical_revision": "v1",
          "workload_type": 2,
          "workload_name": "reviews-1",
          "status": 1,
          "locality": {
            "region": "r1",
            "zone": "r1z2",
            "subzone": "r1z2s3"
          }
        }
      }
    },
    {
      "Type": {
        "Workload": {
          "uid": "//Pod/gwtest/reviews-2",
          "name": "reviews-2",
          "namespace": "gwtest",
          "addresses": [
            "CvQCDg=="
          ],
          "service_account": "default",
          "node": "worker2",
          "canonical_name": "reviews",
          "canonical_revision": "v2",
          "workload_type": 2,
          "workload_name": "reviews-2",
          "status": 1,
          "locality": {
            "region": "r1",
            "zone": "r1z2",
            "subzone": "r1z2s4"
          }
        }
      }
    },
    {
      "Type": {
        "Workload": {
          "uid": "//Pod/gwtest/reviews-3",
          "name": "reviews-3",
          "namespace": "gwtest",
          "addresses": [
            "CvQDAw=="
          ],
          "service_account": "default",
          "node": "worker3",
          "canonical_name": "reviews",
          "canonical_revision": "latest",
          "workload_type": 2,
          "workload_name": "reviews-3",
          "status": 1,
          "locality": {
            "region": "r1",
            "zone": "r1z3",
            "subzone": "r1z3s4"
          }
        }
      }
    },
    {
      "Type": {
        "Workload": {
          "uid": "//Pod/gwtest/reviews-4",
          "name": "reviews-4",
          "namespace": "gwtest",
          "addresses": [
            "CvQEBA=="
          ],
          "service_account": "default",
          "node": "worker4",
          "canonical_name": "reviews",
          "canonical_revision": "v1",
          "workload_type": 2,
          "workload_name": "reviews-4",
          "status": 1,
          "locality": {
            "region": "r2",
            "zone": "r2z1",
            "subzone": "r2z1s1"
          }
        }
      }
    }
  ],
  "resources": [
    {
      "Kind": {
        "Bind": {
          "key": "8088/gwtest/http-tcproute",
          "port": 8088
        }
      }
    },
    {
      "Kind": {
        "Bind": {
          "key": "8089/gwtest/http-tcproute",
          "port": 8089
        }
      }
    },
    {
      "Kind": {
        "Listener": {
          "key": "gwtest/http-tcproute.bar",
          "name": "bar",
          "bind_key": "8089/gwtest/http-tcproute",
          "gateway_name": "gwtest/http-tcproute",
          "protocol": 4
        }
      }
    },
    {
      "Kind": {
        "Listener": {
          "key": "gwtest/http-tcproute.foo",
          "name": "foo",
          "bind_key": "8088/gwtest/http-tcproute",
          "gateway_name": "gwtest/http-tcproute",
          "protocol": 4
        }
      }
    },
    {
      "Kind": {
        "TcpRoute": {
          "key": "gwtest/tcp-app-1.0.foo",
          "listener_key": "gwtest/http-tcproute.foo",
          "route_name": "gwtest/tcp-app-1",
          "backends": [
            {
              "backend": {
                "Kind": {
                  "Service": "gwtest/foo.gwtest.svc.cluster.local"
                },
                "port": 3001
              },
              "weight": 1
            }
          ]
        }
      }
    },
    {
      "Kind": {
        "TcpRoute": {
          "key": "gwtest/tcp-app-2.0.bar",
          "listener_key": "gwtest/http-tcproute.bar",
          "route_name": "gwtest/tcp-app-2",
          "backends": [
            {
              "backend": {
                "Kind": {
                  "Service": "gwtest/bar.gwtest.svc.cluster.local"
                },
                "port": 3002
              },
              "weight": 1
            }
          ]
        }
      }
    }
  ]
}
